[package]
name = "rdiff"
version = "0.0.1"
edition = "2021"
license = "GNU GENERAL PUBLIC LICENSE"
authors = ["Aleksandr Cherepanov <aleksandr.s.cherepanov@gmail.com"]

[dependencies]
clap_derive = {version = "4.5.18"}
clap = { version = "4.5.22", features = ["derive"] }

[package.metadata.deb]
maintainer = "Aleksandr Cherepanov <aleksandr.s.cherepanov@gmail.com"
copyright = "2024, Aleksandr Cherepanov <aleksandr.s.cherepanov@gmail.com"
